finished index page, added css and other pages

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,6 @@
     <title>Rosie</title>
 </head>
 <body>
-    
     <header>
         <div class="row no-gutters">
             <a class="col-md-4 logo" href="02-index.html"></a>
@@ -43,20 +42,9 @@
             </div>
         </div>
     </header>
-
-    <section class="container-fluid">
-        <div class="row row-table">
-            <div class="col-md-8 bg-color-three-reasons section-column">
-                <div class="row">
-                    <div class="col">
-                        <h3 class="section-heading uppercase">About Me</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <section>
         
     </section>
-
     <footer class="container-fluid">
         <div id="footer-details" class="row">
             <div class="col-sm-4">
